2004-11-01  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/heap.c: Finalize shared heap support.

	* include/nucleus/queue.h (DECLARE_XNQUEUE): Add global queue
	declarator with built-in initializer.

2004-10-31  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/heap.c: Create the basic infrastructure for mapping
	heap memory to user-space processes.

	* include/nucleus/heap.h (xnheap_t): Add arch-dependent block.

2004-10-30  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/queue.c: Add message queue support.

	* nucleus/pipe.c: More appropriate than legacy "domain bridge"
	name.

2004-10-25  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/shadow.c (xnshadow_linux_sysentry): replace direct
	assignment to __xn_reg_rval by xn_status_return for xn_sys_attach
	and xn_sys_detach syscalls.

	* nucleus/fusion.c (__pthread_ns2ticks_rt, __pthread_ticks2nsr_rt)
	  nucleus/lib/fusion.c (pthread_ns2tsc_rt, pthread_tsc2ns_rt), 
	  include/nucleus/fusion.h:
	Separate conversion between nanoseconds and tscs from conversion
	between nanoseconds and scheduler ticks counts.

	* include/nucleus/asm-i386/system.h, nucleus/trace.c: move
	architecture dependent part of the trace module to system.h.

2004-10-25  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_schedule): Escalate all requests to the
	RTAI domain.

	* nucleus/shadow.c: Get rid of __xn_sys_sched request. Rely on
	xnpod_schedule() escalation handling.

	* README.QUICKINSTALL: Add Pierre Ficheux's quick install note.

	* nucleus/shadow.c (xnshadow_substitute_syscall): Make sure to
	call request_syscall_restart() on behalf of a shadow only.

2004-10-24  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h (__switch_threads): Fix %ebp
	trashing.

	* nucleus/shadow.c: Fix license. This is kernel-only code, so GPL
	applies with no user-space library consideration.

2004-10-21  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h: Make lock variable volatile.
