@@ -180,9 +180,6 @@ fi
 
 RTAI_LINUX_VERSION="$linux_VERSION.$linux_PATCHLEVEL.$linux_SUBLEVEL"
 AC_MSG_RESULT([$RTAI_LINUX_DIR (kernel ${RTAI_LINUX_VERSION}${CONFIG_SMP:+-SMP})])
-if test x${CONFIG_RTAI_LINUXDIR} = x; then
-   CONFIG_RTAI_LINUXDIR=$RTAI_LINUX_DIR
-fi
 
 dnl
 dnl Check the kernel has been Adeos-enabled.
@@ -845,8 +842,6 @@ AC_SUBST(RTAI_KBUILD_ENV)
 AC_SUBST(RTAI_KBUILD_CMD)
 AC_SUBST(RTAI_KBUILD_CLEAN)
 AC_SUBST(RTAI_KBUILD_DISTCLEAN)
-
-AC_SUBST(CONFIG_RTAI_LINUXDIR)
 
 AC_CONFIG_FILES([ \
 	GNUmakefile \
