@@ -14,7 +14,7 @@ RTAI_CC="@CC@"
 RTAI_TARGET_ARCH="@RTAI_TARGET_ARCH@"
 RTAI_TARGET_SUBARCH="@RTAI_TARGET_SUBARCH@"
 RTAI_CONFIG="${staging}${pkgdatadir}/config-fusion-${RTAI_VERSION}"
-RTAI_LINUX_DIR="@CONFIG_RTAI_LINUX_DIR@"
+RTAI_LINUX_DIR="@RTAI_LINUX_DIR@"
 RTAI_LINUX_VERSION="@RTAI_LINUX_VERSION@"
 RTAI_KERNEL_CFLAGS="-I. -I${staging}${includedir} @RTAI_KMOD_APP_CFLAGS@ @RTAI_FP_CFLAGS@"
 RTAI_MODULE_DIR="${staging}@RTAI_MODULE_DIR@"
